--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "aws-sdk": "^2.1048.0",
+    "faunadb": "^4.4.1",
+    "lru-cache": "^6.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
